more edits to ch3, all but conclusion to it almost complete in first draft form

--- a/chap3.tex
+++ b/chap3.tex
@@ -954,25 +954,108 @@ system? Are human pilots so unreliable that we should immediately push
 toward automating all aircraft operations? Or are autopilots so
 finicky that we should emphasize manual flying skills and reduce or
 eliminate the use of autopilots. Most likely, the correct answer is
-somewhere in between. But this concern with cockpit automation is not new.
--this concern with automation is not new: history pulling from DA ch2
---many airlines actually have guidelines requiring automation to be
-used whenever possible
+somewhere in between. But this concern with cockpit automation is not
+new, and pilots and aircraft designers have been negotiating human
+roles in flying machines since the very early days of aviation. The
+tension between stable and unstable aircraft design---will the
+aircraft ``fly itself'' in a given orientation or does it require
+constant control inputs to maintain course---goes back as far as the
+Wright Flyer, as do the competing professional identities that
+accompany them: are you simply a chauffeur, or a ``true
+airman''\cite[p. 21]{???-DM}? The Wright's focus on the operator's
+skill created the unique profession of the
+``pilot,'' and unstable aircraft were the standard for years, until
+human fatigue over long periods of flight changed the importance of
+stability to aircraft operation\cite[p. 22-24]{???-DM}. Stability,
+this subsequent virtue of a well-engineered airframe had to be again
+renegotiated in the context of supersonic flight, where stability
+problems related to supersonic airflow required electronic
+solutions\cite[p. 33]{???-DM}. But there was deep concern among the
+flying community about black boxes that are out of the pilot's
+control, and some saw these devices as ``band-aids'' for engineers not
+``skilled'' enough to make the aircraft stable\cite[p. 35]{???-DM}. J.
+O. Roberts' ``The Case Against Automation in Manned Fighter Aircraft''
+argued for more emphasis on displaying information to pilots, rather
+than using automation to assuming control\cite[p. 35]{???-DM}.
+Nevertheless, cockpit automation has continued to increase. Today,
+many airlines 
+actually have guidelines that require automation systems to be used
+whenever possible\cite{???}. This actually parallels some developments
+in the automotive space: deep controversies exist among automotive
+enthusiasts about the proper roles of all-wheel-drive, traction
+control, and automatic transmissions in the driving process. Even ABS,
+generally accepted today as a positive technology that enhances safety and
+performance, is in some senses controversial, driven by the idea that
+a professional driver utilizing fully manual ``threshold braking,''
+developed through deep experience and human skill, can outperform the
+computerized system\cite{???}. New performance vehicles---like the
+highly-computerized Nissan GT-R, with a plethora of all-wheel-drive
+systems---are criticized by some as ``too easy to drive''\cite{???}.
+An overly-computerized vehicle is to some soulless, unexciting, too much like
+a video game: these vehicles may derisively be said to be for the
+PlayStation generation, even while others argue for the superior
+abilities that advanced technologies convey upon human
+drivers,\footnote{This community has stumbled upon the point of
+  human-supervisory control, and a rudimentary sort of cyborg
+  identity, perhaps without even realizing it. Rather than holding the
+machine or the human as prime, the human gains through their
+interaction with the technology.}
+turning an average driver into a hero or track-star\cite{???}.
+
+Computerized aids are sites of contradictory feelings and pressures. 
+http://www.brookings.edu/research/papers/2014/04/products-liability-driverless-cars-villasenor
+``faintly ominious''
+It is well enshrined within legal principles that drivers using
+cruise control and even automated driver aids are legally responsible
+for controlling their vehicles at all times, and yet these same aids
+may reduce attention and ability to react in an emergency situation.
+Traction and stability control are now required for all cars in the US
+market,\cite{???-brookings} while drivers' identities modulate the
+extent to which such
+advancements are seen as valuable, or how often the features get
+turned off in day-to-day use. 
 
 While the AF 447 example shows the
-perils of human interaction with automated systems, its significance
+perils of human interaction with automated systems, an issue which will
+affect automated vehicles as well, its significance
 within aircraft development does not seem to be broadly appreciated
-outside of that field. <gets taken by car people as human interaction
-should NEVER be expected; aircraft construction takes it the other way>
--but it is having new results: Boeing and Airbus stepping back from
-automation, while increasing computerization
---adaptive automation
----taking on tasks in high-stress situations, returning them in
-low-stress situations
-
--difference in professionalization of pilots
--but no fundamental reason why this knowledge is not applicable here,
--if appropriately moderated for the role and status of the driver
+outside of that field. It gets taken---including by one of the
+automated vehicle researchers I interviewed---as meaning that human
+interaction should \emph{never} be expected, and that until automated
+vehicles can be fully self-driving in all circumstances, they will not
+be sufficiently safe. The risks of a hand-over of control at high
+speed would negate, by this reasoning, the benefits of computer
+control on the highway. But aircraft companies seem to be learning a
+different lesson from the same incidents. Boeing and Airbus, the two
+most prominent manufacturers of commercial airliners, are stepping
+back from complete automation, while increasing the computerization of
+their cockpits through digital displays and tools to assist pilots in
+the task of flying\cite{???}. The focus is on adaptive or adaptible automation
+rather than complete computer control. Both types of systems allow for
+balancing the operator's load---adaptive systems automatically,
+adaptible systems by operator request---taking on tasks during
+high-stress, busy situations, but handing back tasks during periods of
+limited load in order to keep the operator informed of and engaged in
+the operation of the system\cite{???}. Such systems have their own
+engineering challenges, but represent a very different answer to the
+question ``what should the role of pilots be?'' than does the further
+complete automation of aircraft operations. Sustained human engagement
+with highly-automated systems is possible, but has to be designed into
+the system from the beginning. Asking people to be mere machine
+tenders, present only to ensure the continued operation of the
+machinery, is indeed untenable, as it tends to produce boredom,
+inattention, and the risk of catastrophic failures like the AF 447
+crash. However, joint human-machine systems research provides avenues
+to engage operators in the operation of the system in ways that
+increase overall system safety, without necessitating that the human
+be entirely eliminated. There is certainly a difference in the
+professionalization of pilots compared with the ordinary status of an
+everyday driver, and this difference in status and roles certainly
+changes the amount of training we expect operators to have and the
+sorts of interactions that may appeal to them, but there is no
+fundamental reason why human-supervisory control approaches and
+experience are not applicable to automated vehicles, if appropriately
+moderated for the role and status of the driver. 
 
 \subsection{Whither Alternate Narratives?}
 
