ch3 draft edited a little, conclusion still pending

--- a/chap3.tex
+++ b/chap3.tex
@@ -10,8 +10,8 @@
 %% -some stakes (data) are still applicable, but others may be
 %% ameliorated
 
-EDITS
-SUCHMAN: plans and situated actions
+%%EDITS
+%%SUCHMAN: plans and situated actions
 
 Most automated vehicle narratives---and all those we have investigated
 so far---rest on two primary, interlocking assumptions. First, the nature of the
@@ -1002,15 +1002,19 @@ machine or the human as prime, the human gains through their
 interaction with the technology.}
 turning an average driver into a hero or track-star\cite{???}.
 
-Computerized aids are sites of contradictory feelings and pressures. 
-http://www.brookings.edu/research/papers/2014/04/products-liability-driverless-cars-villasenor
-``faintly ominious''
+Computerized aids are sites of contradictory feelings and pressures.
+Cruise control, when first introduced commercially as Chrysler's ``Auto-Pilot''
+was described as ``faintly
+ominious'' by \emph{Popular Science}, but nevertheless seemed like a
+``genuine help'' for reducing
+fatigue\cite{???http://www.brookings.edu/research/papers/2014/04/products-liability-driverless-cars-villasenor}.
 It is well enshrined within legal principles that drivers using
 cruise control and even automated driver aids are legally responsible
 for controlling their vehicles at all times, and yet these same aids
-may reduce attention and ability to react in an emergency situation.
+may reduce attention and ability to react in an emergency
+situation---the other side of reducing fatigue.
 Traction and stability control are now required for all cars in the US
-market,\cite{???-brookings} while drivers' identities modulate the
+market,\cite{???-brookings} while drivers' identities still modulate the
 extent to which such
 advancements are seen as valuable, or how often the features get
 turned off in day-to-day use. 
