first draft of ch 3 done minus short part detailing how this new narrative changes each previous issue

--- a/chap2.tex
+++ b/chap2.tex
@@ -31,7 +31,7 @@ EDITS
 Kelly Joyce, fMRI; Magnetic Appeal: MRI and the Myth of Transparency
 
 Ah, mapping via Karen Caplan
-Starr & Bowker, standards? resonant?
+Starr \& Bowker, standards? resonant?
 
 H.M.Collins book: p.76; something to think about w/ machinic actions
 
