--- a/chap3.tex
+++ b/chap3.tex
@@ -38,23 +38,24 @@ interaction is, in a sense, no human-machine interaction. As I have
 outlined, this perspective comes from particular roots (automation
 history, artificial intelligence, science fiction), but is not the
 only way to envision automated systems. There is a deep history of
-work in human supervisory control (HSC) that has great implications
+work in human supervisory control (HSC) that has important implications
 for the real-world design of automated systems, and which tells a
 potentially very different story about what automated vehicle
-operation will look like from a ``driver's'' point of view.
+operation will look like from a ``driver's'' or operator's point of view.
 
 \subsection{Human Supervisory Control}
 
 No current ``self-driving'' vehicles designed to operate on public
 roadways (as opposed to in controlled conditions) operate in a fully
-autonomous mode. The cars operate---and legally, can only operate---in
+autonomous mode. The cars operate---and legally, can only
+operate\cite{???}---in
 a supervised mode, wherein a human driver is responsible for
 overseeing the automated systems. Even if the vehicle is capable of
 performing a maneuver ``on its own,'' that operation is monitored, at
 least intermittently, by a person who can theoretically correct errors
 made by the automation.\footnote{Of course there are serious
-  limitations to this capability, as HSC research shows, and as I will
-  more fully describe later in this chapter} This point is made not
+  limits to this capability, as HSC research shows, and as I will
+  more fully describe later in this chapter.} This point is made not
 only numerous articles describing vehicle operations in general terms,
 but by Google's
 own job postings, searching for ``vehicle safety specialists'' to join
@@ -424,7 +425,11 @@ not fundamentally new---simply, its importance is not often
 recognized outside of particular disciplinary boundaries. Supervisory control and 
 joint-cognitive systems approaches are actually in use all over
 industry, even in cases where they are not necessarily cast in
-those terms. <??? Describe some from Sheridan 10-11> While it is also
+those terms. 
+
+<??? Describe some from Sheridan 10-11 or run paragraphs together>
+
+ While it is also
 implicit in much popular writing about autonomous systems, however,
 supervisory control is not generally acknowledged as an important and
 developed field. Human supervisory control is not even that well
@@ -444,10 +449,12 @@ technology sector\footnote{This I can speak to personally, through my
 following the success of design-first product development by IT
 companies, most notably Apple.}, this too is often (though not always) a surface-level
 consideration of the interface, without consideration of deeper
-dynamics of human and joint cognitive processes. However, it may be
+dynamics of human and joint cognitive processes. It may be
 that this kind of engineering work gains greater recognition with the
 entry of Google, Apple, Tesla, and other high-technology companies
-into the autonomous vehicle space.
+into the autonomous vehicle space, but so far Google's seems to dream
+of minimizing the interface as much as possible, rather than more
+broadly considering what sort of interface makes sense.\cite{???}
 %%Wrap up: Actual use all over industry (Sheridan 10-11), and implicit
 %in much popular writing, 
 %just not generally acknowledged as an important field in all its complexity
@@ -613,11 +620,11 @@ code to which was only reluctantly placed in the cockpit in a sealed
 envelope rather than being radioed from the ground\cite[p. 89]{???-DM}---and
 this automation was seen as a feminization of space:  Soviet
 spacecraft required no skill to operate, and were therefore,
-rhetorically at least, less impressive.\cite{???} This idea was
+rhetorically at least, less impressive.\cite{???} This reading was
 supported some years later in 1963 by the flight of Valentina
 Tereshkova, the 
-first woman in space, a milestone not followed by the United States
-until the 1970s. This approach perhaps fit a communist ethos, sending
+first woman in space (a milestone not followed by the United States
+until the 1970s). This approach perhaps fit a communist ethos, sending
 the representatives of every-man and every-woman into
 space,\footnote{Neither Gargarin nor Tereshkova had aristocratic
   family backgrounds.} but did
@@ -837,7 +844,7 @@ as if they are the rover, and have to ``retool'' their thinking, to
 become the ``mind'' of the rover and plan its work in a ``symbiotic''
 way\cite[p. 106, 110, 118]{???-clancey}. The system's autonomy does not replace the
 scientists, but allows them to do more of what they want to do and are
-best at, and less of what they don't: some automation could reduce the
+best at, and less of what they don't: some types of automation could reduce the
 autonomy of the scientists, and their ability to act creatively and
 spontaneous to capitalize on new findings\cite[p.
   118-119]{???-clancey}. 
@@ -979,8 +986,8 @@ argued for more emphasis on displaying information to pilots, rather
 than using automation to assuming control\cite[p. 35]{???-DM}.
 Nevertheless, cockpit automation has continued to increase. Today,
 many airlines 
-actually have guidelines that require automation systems to be used
-whenever possible\cite{???}. This actually parallels some developments
+have guidelines that require automation systems to be used
+whenever possible\cite{???}. This parallels some developments
 in the automotive space: deep controversies exist among automotive
 enthusiasts about the proper roles of all-wheel-drive, traction
 control, and automatic transmissions in the driving process. Even ABS,
@@ -990,7 +997,7 @@ a professional driver utilizing fully manual ``threshold braking,''
 developed through deep experience and human skill, can outperform the
 computerized system\cite{???}. New performance vehicles---like the
 highly-computerized Nissan GT-R, with a plethora of all-wheel-drive
-systems---are criticized by some as ``too easy to drive''\cite{???}.
+systems---are criticized by some as ``too easy'' to drive quickly\cite{???}.
 An overly-computerized vehicle is to some soulless, unexciting, too much like
 a video game: these vehicles may derisively be said to be for the
 PlayStation generation, even while others argue for the superior
@@ -1063,63 +1070,162 @@ moderated for the role and status of the driver.
 
 \subsection{Whither Alternate Narratives?}
 
-3) situate the moonshot approach (which may actually be easier in some
-senses but less socially acceptable) and the mixed approach in a way
-that does not support a teleology of autonomous vehicle development
-(think Sheridan's graph of telerobotics, not the SAE's 5 stages) (4 p)
---in historical context of previous systems that are wholly or
-partially autonomous (4 p)
+While there is a perhaps pleasing sort of narrative arc to the idea
+that complete and total automation is the ultimate end product of
+technological development---restrained only when nasty luddites, backwards lawyers, and
+risk-averse policy makers get in the way of natural progress---this
+simplistic story of automation
+teleology is not supported by history. While what has happened in the
+past is not destined to repeat, and the regime of ground vehicle
+automation could come to be very different from that of aerospace,
+this history at least needs to be taken seriously as evidence for what
+can and may occur. There are lessons here we cannot afford to forget.
+While it may be just as difficult, or even more difficult, to engineer
+an appropriate joint human-machine system that takes the capabilities
+and desires of people seriously, rather than trying to minimize human
+involvement to the greatest extent possible, that approach might
+result in vehicles that 
+come to be more socially acceptable in certain ways---notably, in
+terms of autonomy and ethics. Furthermore, as I have stated
+repeatedly, complete autonomy is fundamentally a chimera.
 
-Defense Science board report (DSB)
-NASA, and the Defense Science Board in their report The Role of
-Autonomy in DoD Systems, describe this proliferation of attempts at
-autonomy taxonomies as developing out of Sheridan's work.i The DSB
-identifies that these levels formulations are “often incorrectly
+%% 3) situate the moonshot approach (which may actually be easier in some
+%% senses but less socially acceptable) and the mixed approach in a way
+%% that does not support a teleology of autonomous vehicle development
+%% (think Sheridan's graph of telerobotics, not the SAE's 5 stages) (4 p)
+%% --in historical context of previous systems that are wholly or
+%% partially autonomous (4 p)
+
+%%Defense Science board report (DSB)
+NASA, and the Defense Science Board in their report \emph{The Role of
+Autonomy in DoD Systems}, describe the proliferation of attempts at
+automation taxonomies as developing out of Sheridan's work, the very
+book cited above as the bible for human supervisory control.\cite{???}
+However, the DSB takes a far more nuanced position than many do,
+perhaps do to many years worth of accumulated experience within the
+military in terms of how to understand and apply autonomy in practical
+systems. The DSB
+identifies that these levels formulations are ``often incorrectly
 interpreted as implying that autonomy is simply a delegation of a
 complete task to a computer, that a vehicle operates at a single level
 of autonomy and that these levels are discrete and represent scaffolds
-of increasing difficulty,”ii all interpretations made by both the
-NHTSA and SAE taxonomies and ones I have been attempting to critique.
-The DSB highlights two main negative consequences of the popularity of
-levels of autonomy: that it “deflects focus from the fact that all
-autonomous systems are joint human-machine cognitive systems”1 and
-that it “reinforces fears about unbounded autonomy” while obscuring
-the fact that no systems are fully autonomous.iii Humans are always
+of increasing difficulty,''\cite{???} all interpretations made by both the
+NHTSA and SAE taxonomies that may be expected to guide self-driving
+vehicle research and policy, and the very interpretations I have been
+attempting to critique. Instead, autonomy in practice generally
+involves sub-tasks, and novel mixes of human and computational effort,
+not the wholesale transfer of a complete task or process. Levels
+formulations lose sight of the fact that autonomy and control are
+already fractured and contingent:  what ``level'' is my vehicle
+operating in when I drive an automatic transmission in semi-manual
+mode, or engage cruise control, or allow a turn signal stalk to
+automatically return to neutral after a turn of the wheel is detected,
+or stand on the brake pedal to engage ABS in an attempt to bring the
+vehicle to a stop as quickly as I have requested. These currently
+everyday situations already defy levels, and represent overlapping, shifting
+delegations of authority that may change on a second-by-second basis.
+I also claim, to add to their critique, that the
+levels seem to also suggest scaffolds of increasing desirability,
+which, as we have seen in air and space flight, is a matter of perspective.
+
+In addition, the DSB highlights two main negative consequences of the popularity of
+levels of autonomy: that it ``deflects focus from the fact that all
+autonomous systems are joint human-machine cognitive systems''\cite{???} and
+that it ``reinforces fears about unbounded autonomy'' while obscuring
+the fact that no systems are fully autonomous\cite{???}. Humans are always
 involved somewhere along the line, in their programming, production,
 and use, though it makes sense that the military, focused as it is on
 human command hierarchies, would find it especially important to make
-this apparent. 
+this apparent. Even so-called ``full autonomy'' is not likely to be so
+simply full. At the very least, a human-rated system will need to have
+a stop or abort button. And having such an option implies some human
+oversight, which means a number of additional questions soon arise:
+How much monitoring? When does it happen? And how is it
+regulated or supported by the device? We should recognize that this
+monitoring is a valid and valuable component of vehicle operations,
+rather than discount it as a stopgap measure. New tools and interfaces
+may be necessary to facilitate this process, to allow for the human to
+take on new roles in the human-machine relationship: currently, engineers
+co-piloting Google's driverless vehicles sit with laptops to monitor
+the vehicle telemetry\cite{???-article-from-DM-class}. Data displays
+like this, or like the pretty LIDAR visualizations that get used to
+explain and dramatize sensor data, could be needed to form the core of the
+instrumentation for the automated vehicle. More discussion should be
+happening around the dashboard of the future; in the dominant
+narrative of the driverless vehicle, the dashboard is vestigial, but
+it could be a vibrant space presenting unparalleled new possibilities
+for human-machine interaction.
 
-EVEN ``FULL AUTONOMY'' is not likely to be so simply full; got to have
-a stop/abort button! if so, that implies some human oversight, which
-means you have to start questioning how much, when, and how is it
-regulated or supported?
+Attention, and how to preserve, regulate, monitor, and transact it,
+must be at the center of vehicle development. And the parameters of
+these interactions are in part defined by the end goal. Much popular
+discussion centers around texting as a need for automated cars. But as
+David Mindell describes,``wanting to text is different
+from needing a fully automated vehicle,''\footnote{David Mindell,
+  discussion with the author, September 8, 2014} and it seems quite possible
+to create a vehicle that will allow distractions on the order of the
+time span of writing and sending a text even if it is not feasible, or
+not culturally acceptable, to build one that is fully automated. In
+all this, we should avoid the clich\'{e}d question ``People: sinners
+or saints?'' which seems so popular in media discussions: it represents
+a ``false position'' that does not adequately reflect the complex
+nature of operating automated
+systems\cite[p. ??]{???-woods\&hollnagel-JCS-ch1}. As operators, we are
+sources of both success and failure. But ultimate, as Woods and
+Hollnagel point out, all cognitive systems are finite and will
+therefore also have errors, lapses, and
+failures\cite[p. ??]{???-woodshollnagel}. Success in automation is not
+a given that the human presence degrades,\footnote{And it is not fair
+  to say that increasing automation necessarily decreases the
+  importance of the human. The NRC (National
+  Research Council) report on aviation, claims the following: 
+``For example, antilock braking systems and airbag systems on cars are
+fully automatic, deciding on their own when to act. However, fully
+automatic systems as well as fully
+autonomous systems depend on humans to define and limit the scope of
+their authority and the range of possible actions. Movement along the
+continuum typically does not eliminate or diminish the importance
+of the humans to the operations of the system, but it does change
+their role. In fact, the human’s role
+becomes more rather than less important when moving toward the
+autonomous end of the spectrum
+because it is so important to assure that the systems are
+properly designed, tested, deployed, and monitored to ensure the
+aircraft’s continued airworthiness''\cite[p. 14-15]{???-NRCaviation}}
+but something to be  
+achieved through careful engineering of automated components and their
+human interactions. 
 
-Note the discussion of hte news article from DM's class about the
-co-pilot with his laptop, overseeing the operation:  new interfaces
-and new data may be necessary to perform this task; new roles required
-of the human
 
-Attention; how to preserve, regulate, monitor, transact
-DM comments (Sep8) about texting: ``--wanting to text is different
-from needing a fully automated vehicle'', and it seems quite possible
-to create a vehicle that will allow distractions on the order of that
-time span even if it is not feasible to build one that is fully automated
+We should return here to the myth of the ``personless'' factory or the
+self-teaching computer program: the ``autonomous'' vehicle is a
+similar sort of myth; always a 
+product of people, responsible to people, and involving people,
+however deep in the margins of our vision. Writing this off as
+anomalous or a failure, and focusing on ``autonomy'' or ``self-driving,''
+obscures real complexities of operation that encounters with the world
+will inevitably involve. The important question is when/how are people
+involved, and this should be empirically not ideologically driven.
+Perhaps there is hope in this altered narrative to ameliorate some of
+the issues facing automated vehicles today. 
 
-Avoiding: the question ``People: sinners or saints?''; a ``false
-position'' (see woods\&hollnagel JCS ch 1); 
--we are both sources of success and failure
--all cognitive systems finite
--success is not a given that the human degrades, but something
-achieved through careful engineering
+unlikely to fix the surveillance state/data gathering/mapping,
+certainly won't alone fix risk projections
 
-note especially the contradiction within X's characterization of human
+but stands to alter the dynamics of use and therefore city
+planning/environmental effects
+
+and totally changes the ethical landscape for these vehicles, and
+therefore opens new doors for human acceptance
+
+Additionally, it presents the possibility for a renegotiation of car
+culture and its troubled relationship with the automated vehicle.
+
+I noted especially the contradiction within X's characterization of human
 drivers and their future: ``humans are bad drivers and we should all
 have our licenses taken away'' compared with ``car nuts should welcome
 this because it will free the roads up for them'' which doesn't
 actually make sense!
---but there's perhaps a middle ground here in the hybrid narrative
-
 -question of whether people will be allowed to drive
 --self-contradictory comments: Daniela Rus saying
 -that people will still be able to drive normally
@@ -1131,47 +1237,28 @@ actually make sense!
 BUT people are licensed to drive: no reason to say new training may
 -not be necessary or good; or that some continuing education would not
 -be a net good thing
+--perhaps a middle ground here in the hybrid narrative; future cars
+may be vulnerable to the same critiques as the Nissan GT-R, but still
+provide a role for the human and a place for enthusiasts who want to
+be involved in vehicle operations
 
-
-Conclusion:
-connect back to the myth of the ``personless'' factory or the
-self-teaching computer program
--the ``autonomous'' vehicle is a similar sort of myth; always a
-product of people, responsible to people, involving people
--writing this off and focusing on ``autonomy'' or ``self-driving''
-obscures real complexities of operation that encounters with the world
-will inevitably involve
--the important question is when/how are people involved, and this
-should be empirically not ideologically driven
-
-NRC report on aviation (see e.g. 14-15)
-``For example, antilock braking systems and airbag systems on cars are
-fully
-automatic, deciding on their own when to act. However, fully automatic
-systems as well as fully
-autonomous systems depend on humans to define and limit the scope of
-their authority and the range of possible actions. Movement along the
-continuum typically does not eliminate or diminish the importance
-of the humans to the operations of the system, but it does change
-their role. In fact, the human’s role
-becomes more rather than less important when moving toward the
-autonomous end of the spectrum
-because it is so important to assure that the systems are
-properly designed, tested, deployed, and monitored to
-ensure the aircraft’s continued airworthiness.''
-
-
-Whether you are an operator in a vehicle trying to monitor that you
-are on the right path and not about to be killed; or someone waiting
-for their car to come pick them up who wants to ensure it is en route
-and not in an accident; or a system-tech at Google administering a
-fleet of automated vehicles attempting to ensure they are not being
+In the end, whether you are an operator in a vehicle trying to monitor that you
+are on the right path, and not about to be killed by an undetected
+obstacle; or an operator waiting
+for their car to come pick them up, who wants to ensure that it is en route
+and not in an accident; or an operator and system-technician at a
+multinational corporation administering a fleet of automated vehicles,
+attempting to ensure they are not being 
 hijacked or stolen, the situation you are in is one of supervisory
-control
--NOT RECOGNIZING it as such does not make it not so, only means we are
-likely to neglect the most important parts of the system design in
-terms of its adoption and long-term use
--AND ignore new skills/competencies that may be important for
-operation (not to say ``required'' but perhaps they should be)
+control. Not recognizing it as such does not make it not so, it only means we are
+likely to neglect the most important parts of the system design---in
+terms of its adoption and long-term use---by blindly following a
+narrative based on a warped view of history. And we are likely to
+ignore new skills and competencies that may be important for
+operation (or even vital to operation, and perhaps which ought to be
+licensed and required), or which may be valuable in other ways, for
+human reasons. Cars---and transportation systems as a whole---are
+designed to serve human needs, and must ultimately answer to those
+needs, even those that might seem, to some, to be mere ethical squeamishness.
 
 
