--- a/main.bib
+++ b/main.bib
@@ -757,7 +757,7 @@
 }
 
 @BOOK{SLAMbook,
-   author = "Juan-Antonio Fern\'{a]ndez-Madrigal and Jos\'{e} Luis Blanco Claraco",
+   author = "Juan-Antonio Fernandez-Madrigal and Jose Luis Blanco Claraco",
    title = "{S}imultaneous {L}ocalization and {M}apping for {M}obile {R}obots: {I}ntroduction and {M}ethods",
    publisher = "IGI Global",
    address = "Hershey, Pennsylvania",
