closer to done on ch 3

--- a/chap3.tex
+++ b/chap3.tex
@@ -1209,26 +1209,93 @@ involved, and this should be empirically not ideologically driven.
 Perhaps there is hope in this altered narrative to ameliorate some of
 the issues facing automated vehicles today. 
 
-unlikely to fix the surveillance state/data gathering/mapping,
-certainly won't alone fix risk projections
+It seems highly unlikely that a supervisory control perspective will
+fix the potential contribution of automated vehicles to the
+surveillance state:  data gathering technologies will still be
+available, and comprehensive mapping may still be necessary for
+operations. In any case, the potential still exists to use hardware
+and software to try to restrain and control people's actions and
+movements. Supervisory control will also certainly not fix the
+reliance on projections of risk for decision making about vehicles:
+while reducing certain risks, this approach may increase others, and
+any estimates of such risk will still be estimates only, derived from
+models that may be incomplete.
 
-but stands to alter the dynamics of use and therefore city
-planning/environmental effects
+However, human supervisory control stands to alter the dynamics of use
+and therefore change the sort of urban planning necessary to account
+for these vehicles, as well as the environmental effects of their use.
+Systems designed with supervision in mind may operate in a different
+way than those designed primarily with autonomy\footnote{This is a
+  tricky distinction. In this case
+  I mean autonomy over long timescales, and, as major companies seem
+  to be working on, autonomy from the human in the vehicle. Even an
+  ``autonomous'' car will be supervised at some level, but the
+  question here is on what timescale the human is involved in
+  monitoring vehicle actions. The ``autonomous'' model really means very
+  long timescale supervision, such as from a remote data center. In
+  the supervisory control case I am considering here, though such
+  supervision could come remotely, it would be more frequent and more
+  deeply involved in the vehicle's actions---a military UAV operator
+  would be one example of this, or a supervisory operator within the
+  vehicle.} in mind. Operational
+differences will change the behaviors favored by these systems:  Can
+they operate on their own and drive to remote parking garages? Or be
+sent to pick up children from school? How much attention is required
+to operate the vehicle, and if that attention comes from the human
+within the vehicle, how will that affect how likely people are to
+drive rather than take other forms of transport that could reduce,
+rather than increase, road congestion? 
 
-and totally changes the ethical landscape for these vehicles, and
-therefore opens new doors for human acceptance
+But where supervisory control considerations come to totally change
+the landscape is in the field of ethics. The ethical operation of
+vehicles involving computer code will always depend to an extent on
+that code, and the previous discussion about programmatic ethics still
+holds. But what changes here is that the vehicle is no longer free to
+operate based only on its programmed ethics for long periods of time.
+Instead, the human operator is involved in decision making processes
+at a much more granular level. Will some emergency situations likely
+be handled in a largely automated fashion, just as today's pedestrian
+detection systems can perform an emergency stop to avoid pedestrians a
+driver does not see? Almost certainly. But these issues, though
+perhaps ethically tricky, are much closer to situations we are already
+working through. While one positive effect of the autonomous vehicle
+might be to estrange us from vehicle operations, and thereby draw us
+to consider more seriously the ethics programmed into software
+systems, the effect in the dominant narrative seems to be drawing a
+clear distinction between current and future automation systems:  in
+the NHTSA's policy document, current automation systems like ABS,
+traction control, and stability control can override the human, but
+``driverless'' systems must have overrides that can be used at any
+time\cite[p. ??]{NHTSA}. This distinction is artificial. However,
+consistent human involvement in vehicle operations seems to open new
+doors for human acceptance, by putting these systems closer to what we
+already know. What we should do is consider carefully why we feel that
+ABS and traction control can be allowed to override human inputs, and
+what separates them from systems that should not be allowed to do so, and
+keep this in mind as we continue to develop more complex automation systems.
 
-Additionally, it presents the possibility for a renegotiation of car
-culture and its troubled relationship with the automated vehicle.
+Additionally, supervisory control presents the possibility for a renegotiation of car
+culture and its troubled relationship with the automated vehicle. In
+my interviews and research work at conferences, I noted especially the
+contradictions within common characterizations of human
+drivers and their future. One interviewee basically asserted that
+humans are bad drivers and that perhaps we should ``all have our
+licenses taken away,'' but later stated that ``car nuts'' should
+welcome self-driving cars because they will free up the roads for
+enthusiast use. This combination does not actually make sense. The
+question of whether people will be allowed to drive also loomed large
+in industry conferences, with further comments that don't seem to hold
+together: Daniela Rus, a computer science researcher, stated at an MIT
+conference that people will still be able to drive normally, sharing
+the roads with automated vehicles, in response to concerns about being
+forced to use automated vehicles. She is most likely correct, but this
+does little to allay fears in the face of the statistic that prompted
+the question: that 90 percent of accidents are caused by human
+error.\footnote{FIND ESTIMATES OF THIS AND COMMENT ON ACCURACY} While
+human driving isn't going away in the near future, the idea that
+autonomous vehicles will free up the roads for people who want to
+drive manually seems like a platitude. 
 
-I noted especially the contradiction within X's characterization of human
-drivers and their future: ``humans are bad drivers and we should all
-have our licenses taken away'' compared with ``car nuts should welcome
-this because it will free the roads up for them'' which doesn't
-actually make sense!
--question of whether people will be allowed to drive
---self-contradictory comments: Daniela Rus saying
--that people will still be able to drive normally
 -these questions are deeply embedded in the idea of progress: does
 -greater safety imply taking licenses away? a question that really
 -only makes sense with a particular vision of autonomy (perhaps a
